# gomp

./: .gitignore  .gitmodules  README.md  pyproject.toml
examples/: basic_pick_place.py  multi_grasp_selection.py  profile_gomp.py  time_optimization_demo.py  visualize_optimization_wrs.py  visualize_trajectory_wrs.py  wrs_interface.py
gomp/: __init__.py  robot_adapter.py
gomp/grasp/: __init__.py  grasp.py  grasp_sampler.py  grasp_set.py
gomp/obstacles/: __init__.py  collision.py  collision_validator.py  depth_map.py
gomp/optimization/: __init__.py  constraints.py  fast_kinematics.py  qp_builder.py  sqp_solver.py  warm_start.py
gomp/planner/: __init__.py  gomp_motion_planner.py  gomp_planner.py  trajectory.py
gomp/visualization/: __init__.py  joint_plots.py  wrs_viz.py
